Switch from images to unordered list

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
   <script defer src="/static/buttons.js"></script>
   <button id=deal> Deal </button>
   <button id=shuffle> Shuffle </button>
-  <div id=cards>
-  </div>
+  <ul id=cards>
+  </ul>
 {% endblock %}
