--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 {% endblock %}
 {% block content %}
   <script defer src="/static/buttons.js"></script>
-  <button id=deal> Deal </button>
-  <button id=shuffle> Shuffle </button>
-  <ul id=cards>
+  <button id=next> Next </button>
+  <button id=clear> Clear </button>
+  <ul id=numbers>
   </ul>
 {% endblock %}
