Oops! All one commit. Convert from numbered list to round-robin button
I forgot to do incremental commits :(

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,6 @@
 {% endblock %}
 {% block content %}
   <script defer src="/static/buttons.js"></script>
-  <button id=next> Next </button>
-  <button id=clear> Clear </button>
-  <ul id=numbers>
-  </ul>
+  <button id="join"> Join </button>
+  <button id="clickme" hidden disabled> Click Me </button>
 {% endblock %}
