Add dummy textbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
   <script defer src="/static/buttons.js"></script>
+  <input type="text" id="textbox"></input>
   <button id="join"> Join </button>
   <button id="clickme" hidden disabled> Click Me </button>
 {% endblock %}
