First work on login

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,5 @@
   Home
 {% endblock %}
 {% block content %}
-  <script defer src="/static/buttons.js"></script>
-  <input type="text" id="textbox"></input>
-  <button id="join"> Join </button>
-  <button id="clickme" hidden disabled> Click Me </button>
+  <h1> Hello {{ username }} </h1>
 {% endblock %}
