Add login capabilities

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,10 @@
 {% block title %} Login {% endblock %}
 {% block content %}
 
+  {% if failed %}
+    <h1 class="error"> Username or password incorrect </h1>
+  {% endif %}
+
   <form method=POST>
     <label> Username <input type=text name="username"> </label><br>
     <label> Password <input type=password name="password"> </label><br>
