--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,18 @@
     <title> {% block title %} {% endblock %}</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/"> Home </a></li>
+        <li><a href="/modify"> Modify Balance </a></li>
+        {% if is_logged_in %}
+          <li><a href="/gamble"> Gamble </a></li>
+          <li><a href="/logout"> Log Out </a></li>
+        {% else %}
+          <li><a href="/login"> Log in </a></li>
+        {% endif %}
+      </ul>
+    </nav>
     {% block content %} {% endblock %}
   </body>
 </html>
