--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,13 @@
   Home
 {% endblock %}
 {% block content %}
-  <script defer src="/static/buttons.js"></script>
-  <input type="text" id="textbox"></input>
-  <button id="join"> Join </button>
-  <button id="clickme" hidden disabled> Click Me </button>
+  <h2> Join an existing room: </h2><br>
+  <form method="POST">
+    <input type="text" id="roomid">
+    <input type=submit id="joinroom" value="Join Room">
+  </form>
+  <h2> Or create a new room: </h2><br>
+  <form method="POST" action="/create">
+    <input type=submit id="createroom" value="Create Room">
+  </form>
 {% endblock %}
