First Work on second sprint card dealing

--- a/templates/game.html
+++ b/templates/game.html
@@ -3,5 +3,13 @@
 {% block content %}
   <h3> ID: {{id}} </h3>
   <script defer src="/static/buttons.js"></script>
-  <button disabled id="clickme"> Click Me! </button>
+  <button disabled id="deal"> Deal Card </button>
+  <button disabled id="endturn"> End Turn </button>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player0"></div>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player1"></div><br>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player2"></div>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player3"></div><br>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player4"></div>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player5"></div><br>
+  
 {% endblock %}
