--- a/templates/game.html
+++ b/templates/game.html
@@ -3,19 +3,20 @@
 {% block content %}
   <h3> ID: {{id}} </h3>
   <script defer src="/static/buttons.js"></script>
+  <button hidden disabled id="start"> Start Game </button>
   <button disabled id="deal"> Deal Card </button>
   <button disabled id="endturn"> End Turn </button>
   <h3> Player 1: </h3>
-  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player0"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player0"></div><br>
   <h3> Player 2: </h3>
-  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player1"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player1"></div><br>
   <h3> Player 3: </h3>
-  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player2"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player2"></div><br>
   <h3> Player 4: </h3>
-  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player3"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player3"></div><br>
   <h3> Player 5: </h3>
-  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player4"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player4"></div><br>
   <h3> Player 6: </h3>
-  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player5"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player5"></div><br>
   
 {% endblock %}
