--- a/templates/game.html
+++ b/templates/game.html
@@ -2,7 +2,7 @@
 {% block title %} Game {% endblock %}
 {% block content %}
   <h3> ID: {{id}} </h3>
-  <script defer src="/static/buttons.js"></script>
+  <script defer src="/static/game.js"></script>
   <button hidden disabled id="start"> Start Game </button>
   <button disabled id="deal"> Hit </button>
   <button disabled id="endturn"> Stand </button>
