IMPLEMENT SPLITTING LETSS GOOOOOO

--- a/templates/game.html
+++ b/templates/game.html
@@ -6,17 +6,24 @@
   <button hidden disabled id="start"> Start Game </button>
   <button disabled id="deal"> Hit </button>
   <button disabled id="endturn"> Stand </button>
+  <button disabled hidden id="split"> Split </button>
   <h3> Player 1: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player0"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player0.1"></div><br>
   <h3> Player 2: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player1"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player1.1"></div><br>
   <h3> Player 3: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player2"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player2.1"></div><br>
   <h3> Player 4: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player3"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player3.1"></div><br>
   <h3> Player 5: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player4"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player4.1"></div><br>
   <h3> Player 6: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player5"></div><br>
+  <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player5.1"></div><br>
   
 {% endblock %}
