--- a/templates/game.html
+++ b/templates/game.html
@@ -7,6 +7,8 @@
   <button disabled id="deal"> Hit </button>
   <button disabled id="endturn"> Stand </button>
   <button disabled hidden id="split"> Split </button>
+  <h3> Dealer: </h3>
+  <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="dealer"></div><br>
   <h3> Player 1: </h3>
   <div hidden style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="player0"></div><br>
   <div hidden style="border-style: solid; border-width: 5px; border-color: blue; width: 50%;" id="player0.1"></div><br>
