--- a/templates/game.html
+++ b/templates/game.html
@@ -7,6 +7,9 @@
   <button disabled id="deal"> Hit </button>
   <button disabled id="endturn"> Stand </button>
   <button disabled hidden id="split"> Split </button>
+  <input hidden type=range min=1 max={{balance}} id=bet_amount value={{balance}}>
+  <h2 hidden id=bet_label>{{balance}}</h2>
+  <button hidden id=bet> Bet </button>
   <h3> Dealer: </h3>
   <div style="border-style: solid; border-width: 5px; border-color: orange; width: 50%;" id="dealer"></div><br>
   <h3> Player 1: </h3>
